# WordCount

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  wordcount.py
.github/workflows/: ci.yml
app/: __init__.py  data_io.py  enhance.py  naming.py  plots.py  stats_ui.py  summary.py  text_analysis.py  ui_controls.py  ui_footer.py  ui_intro.py  ui_preview.py  ui_results.py  ui_stats.py  ui_uploads.py
src/wordcount/: __init__.py
src/wordcount/api/: __init__.py  app.py  deps.py  errors.py  schemas.py  settings.py  storage.py  workers.py
src/wordcount/api/routers/: __init__.py  analysis.py  datasets.py  detected.py  enhanced.py  export.py  health.py  stats.py  wordlists.py
src/wordcount/core/: __init__.py  counting.py  enhance.py  io.py  models.py  naming.py  stats.py  tokenize.py
src/wordcount/viz/: __init__.py  charts.py  plots.py
tests/api/: __init__.py  conftest.py  test_analysis.py  test_datasets.py  test_detected.py  test_enhanced.py  test_errors.py  test_export.py  test_health.py  test_internals.py  test_stats.py  test_wordlists.py
tests/unit/: __init__.py  test_charts.py  test_counting.py  test_enhance.py  test_io.py  test_models.py  test_naming.py  test_plots.py  test_smoke.py  test_stats.py  test_tokenize.py
