[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordcount-stats"
version = "0.1.0"
description = "Dataset + vocabulary -> enhanced dataset + analytics. Pure core with FastAPI connectors."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Gabriele Di Cicco", email = "gabriele.dicicco@gmail.com" }]
keywords = ["text-analysis", "wordlist", "nlp", "fastapi", "analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Core runtime deps. NOTE: streamlit is intentionally NOT here.
# It lives in the optional [legacy] extra only, and is removed entirely in Phase 9.
dependencies = [
    "pandas>=2.1,<3",
    "plotly>=5,<6",
    "scipy>=1.10,<2",
    "statsmodels>=0.14,<1",
    "openpyxl>=3,<4",
    "fastapi>=0.110,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-multipart>=0.0.9,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<7",
    "httpx>=0.27,<1",
    "joblib>=1.4,<2",
]
parallel = ["joblib>=1.4,<2"]
parquet = ["pyarrow>=15,<20"]
# Legacy Streamlit UI — kept runnable during the migration, removed in Phase 9.
legacy = [
    "streamlit>=1.30,<2",
    "wordcloud>=1.9,<2",
    "matplotlib>=3.7,<4",
]

[project.scripts]
wordcount = "wordcount.cli:main"
wordcount-api = "wordcount.api.app:run"

[project.urls]
Homepage = "https://github.com/gdc0000/WordCount"
Repository = "https://github.com/gdc0000/WordCount"

[tool.hatch.build.targets.wheel]
packages = ["src/wordcount"]

# --------------------------------------------------------------------------- #
# Ruff
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["app", "wordcount.py"]  # legacy Streamlit code; deleted in Phase 9

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]  # allow many keyword args (config injection)

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # magic numbers in assertions are fine

[tool.ruff.format]
quote-style = "double"

# --------------------------------------------------------------------------- #
# Mypy — gate the new package only. Legacy app/ is untyped and will be deleted.
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/wordcount"]

[[tool.mypy.overrides]]
module = ["pandas.*", "plotly.*", "statsmodels.*", "pyarrow.*", "scipy.*"]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# Pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Prepend src/ so the installed `wordcount` package is imported, never the
# legacy root-level `wordcount.py` script (deleted in Phase 9).
pythonpath = ["src"]
addopts = "-ra --cov=wordcount --cov-report=term-missing"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # pandas still emits these in some paths; keep them visible but non-fatal.
    "ignore::DeprecationWarning:pandas.*",
    # The legacy streamlit runtime (still installed in this venv during the
    # migration) emits noisy warnings during collection; ignore until streamlit
    # is removed in Phase 9. (Not present in CI, which installs no `[legacy]`.)
    "ignore:No runtime found:UserWarning",
    "ignore:Thread 'MainThread':UserWarning",
]
